<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_mission</name>
  <version>0.1.0</version>
  <description>
    Bring-up and mission orchestration for an AeroStack2 PX4/Pixhawk drone.
    Provides a single launch that starts the platform, state estimator, motion
    controller and motion behaviors in the correct order, plus a mission launch
    that runs a Python mission script against the running stack.
  </description>
  <maintainer email="atarbabgei@gmail.com">atarbabgei</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Runtime stack launched by the bringup -->
  <exec_depend>as2_platform_pixhawk</exec_depend>
  <exec_depend>as2_state_estimator</exec_depend>
  <exec_depend>as2_motion_controller</exec_depend>
  <exec_depend>as2_behaviors_motion</exec_depend>
  <exec_depend>as2_behaviors_trajectory_generation</exec_depend>
  <exec_depend>as2_python_api</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
